--- a/src/index.template.html
+++ b/src/index.template.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128246324-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128246324-4');
+</script>
+
   <title><%= htmlWebpackPlugin.options.productName %></title>
 
   <meta charset="utf-8">
